// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLocale should accept locale string props 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "id",
    "language": "en",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
  ],
}
`;

exports[`withLocale should add default locale, locale, and site locales to component props 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "id",
    "language": "id",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
  ],
}
`;

exports[`withLocale should override locale context with locale props 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "id",
    "language": "en",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
  ],
}
`;
